--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
+akshare==0.9.94
+matplotlib==3.3.4
 numpy==1.20.1
 pandas==1.2.4
+chinesecalendar==1.5.0
 seaborn==0.11.1
-TA_Lib==0.4.20
-matplotlib==3.3.4
+pytz==2021.1
 mplfinance==0.12.7a17
-pandas_datareader==0.9.0
-akshare==0.9.94
+TA_Lib==0.4.20
 chinese_calendar==1.5.0
